# PrepPilot---AI-Study-Companion

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
exam_helper/: __init__.py  config.py  models.py  runtime_warnings.py
exam_helper/ingestion/: __init__.py  chunking.py  index_store.py  loaders.py
exam_helper/retrieval/: retriever.py
exam_helper/services/: groq_client.py  pdf_export.py  quality_guard.py  quiz_service.py  relevance_filter.py  study_plan_service.py  topic_service.py
exam_helper/ui/: components.py  styles.py
exam_helper/utils/: cache.py  guards.py  hash.py
scripts/: e2e_full_test.py  smoke_test_pdf.py
tests/: test_cache_key_profile_model.py  test_cache_keys.py  test_chunk_metadata_propagation.py  test_config.py  test_groq_client.py  test_guards.py  test_loaders.py  test_loaders_pdf_metadata.py  test_loaders_pptx_metadata.py  test_model_fallback.py  test_models.py  test_pdf_export_contains_sections.py  test_quiz_deduplication.py  test_quiz_no_admin_questions.py  test_quiz_schema_validation.py  test_quiz_topic_quota.py  test_rate_limit_and_fallback.py  test_rate_limit_retry.py  test_relevance_filter_admin_chunks.py  test_relevance_filter_core_content.py  test_restore_override_reinclusion.py  test_retrieval_excludes_admin_by_default.py  test_schema_validation.py  test_streamlit_guards.py  test_student_profile_schedule.py  test_study_plan_evidence_quality.py  test_study_plan_ignores_admin_topics.py  test_study_plan_schema_validation.py  test_ui_copy_no_jargon.py
