[project]
name = "preppilot-ai-study-companion"
version = "0.1.0"
description = "Streamlit AI study companion for grounded quizzes and study plans."
requires-python = ">=3.11,<3.15"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"app.py" = ["E402"]
